--- a/JobTrackingApp.Entities/JobTrackingApp.Entities.csproj
+++ b/JobTrackingApp.Entities/JobTrackingApp.Entities.csproj
@@ -1,7 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net472</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
+    </ItemGroup>
 
 </Project>
