WebUI tarafında Admin ve Member Arealar oluşturuldu. Admin tarafında Task(Görev) ve Priority(Aciliyet) CRUD işlemleri tamamlandı. Eager Loading ile Görev kısmında Aciliyetler ilişkili olarak gösterildi

--- a/JobTrackingApp.WebUI/JobTrackingApp.WebUI.csproj
+++ b/JobTrackingApp.WebUI/JobTrackingApp.WebUI.csproj
@@ -9,6 +9,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Areas\Admin\Models" />
+      <Folder Include="Areas\Member\Models" />
       <Folder Include="Describers" />
       <Folder Include="Helpers" />
       <Folder Include="Models" />
