--- a/JobTrackingApp.WebUI/package.json
+++ b/JobTrackingApp.WebUI/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.5.3",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "jquery-validate": "^2.0.0",
+    "jquery-validation-unobtrusive": "^3.2.11"
   }
 }
